--- a/html/Bio.html
+++ b/html/Bio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>My Bio Page</title>
-<link rel="stylesheet" type="text/css" href="aboutMe.css">
+<link rel="stylesheet" type="text/css" href="../css/aboutMe.css">
 
 <style>
 .flex-container {
